--- a/template.html
+++ b/template.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- This website template was created by: Aisha Keller -->
+<!-- This website template was created by: Aisha Keller 7/24/2025 -->
 <html lang="en">
 <head>
   <title>Ari bioSite</title>
@@ -7,6 +7,10 @@
   <link rel="stylesheet" href="css/styles.css">
   <meta name="viewport" content="width=device width, initial-scale=1">
   <link href="https://fonts.googleapis.com/css2?family=Comic+Relief:wght@400;700&family=Delius&display=swap" rel="stylesheet">
+  <link rel="shortcut icon" href="images/favicon-ari.ico.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-ari-32.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon-ari.png">
+  <link rel="icon" sizes="192x192" href="images/android-chrome-192-ari.png">
 </head>
 <body>
 
