--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- This website template was created by: Aisha Keller -->
+<!-- This website template was created by: Aisha Keller 7/24/2025 -->
 <html lang="en">
 <head>
   <title>Ari BioSite</title>
@@ -7,9 +7,12 @@
   <link rel="stylesheet" href="css/styles.css">
   <meta name="viewport" content="width=device width, initial-scale=1">
   <link href="https://fonts.googleapis.com/css2?family=Comic+Relief:wght@400;700&family=Delius&display=swap" rel="stylesheet">
+  <link rel="shortcut icon" href="images/favicon-ari.ico.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-ari-32.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon-ari.png">
+  <link rel="icon" sizes="192x192" href="images/android-chrome-192-ari.png">
 </head>
 <body>
-
 
 <!-- Use the header area for the website name or logo -->
 <header>
@@ -56,21 +59,20 @@
 
   </div>
 
-<div class="container">
+<div class="tablet-desktop">
 
-  <div class="tablet-desktop">
+  <h1> All About Ari</h1>
 
-    <h1> All About Ari</h1>
+  <div class="container">
 
-  <section class="section-one">
-    <h2> Personal Goals </h2>
+  <div class="row">
+
+  <div class="column">
     <img src="images/ari-personal-goal-picture.jpg" alt="illustration of a star saying super star, a bumblebee saying smart as can bee, and a photo of a little girl" class="image1">
-    <p>Ari is a wonderful 3 year old girl with a heart meant for learning, adventure, and lots of love. She is passionate about education, playing, and spending quality time with family. The family collaborates together to help with her informal education, learning new things, basic skills, and manners. When Ari first turned 3 years old, the family started seeking information about formal education. Since Ari liked learning so much, it was time to consider preschool. When going to the local school, Ari and her mother, signed up for a program called Parents be Teachers. The program allowed for school visits to a teacher, and thus the parent and child will learn basic important skills, activities, and knowledge to prepare for preschool, and kindergarten. The program was also great for general child development, enhancing critical thinking, and fostering self-regulation. Ari really enjoyed this program, and was always excited to go to school to meet with the teacher while wearing her cute little backpack. The family got Ari signed up for preschool, and she got approved the summer of 2025. Now, Ari has a few goals to help her further develop her skills, knowledge, and abilities. These goals are; go to preschool, make friends, build social skills, and learn how to follow directions from the teacher. These goals are important, because Ari is able to unlock plenty of benefits such as enhanced social, emotional, and cognitive development which can prepare her for kindergarten.</p>
-  </section>
+  </div>
 
-  <section class="section-two">
-    <h2> Accomplishments </h2>
-    <img src="images/ari-accomplishments-picture.jpg" alt="illustration of a rainbow saying impressive, a cat saying purr-fect and a picture of a young girl" class="image2">
+  <div class="column">
+    <h2>Accomplishments</h2>
     <ul class="list">
       <li>Counts with numbers</li>
       <li>Knows ABCs</li>
@@ -85,7 +87,33 @@
       <li>Can sing to various songs</li>
       <li>Can identify favorite color</li>
     </ul>
-  </section>
+
+    <details>
+      <Summary>Surprise!</Summary>
+      <img src="images/dino3.png" alt="a little brachiosaurus">
+    </details>
+  </div>
+
+  </div>
+
+  <div class="row">
+
+  <div class="column">
+    <h2> Personal Goals </h2>
+  <p>Ari is now a wonderful 3-year-old girl with a heart meant for learning, adventure, and lots of love. She is passionate about education, playing, and spending quality time with family. Ari spends a lot of time with her family and enjoys spending time with each of them. The family collaborates to help with her informal education, learning new things, fundamental skills, and manners. When Ari first turned 3 years old, the family started seeking information about formal education. Since Ari liked learning so much, it was time to consider preschool. When Ari and her mother went to the local school, they signed up for a program called Parents Be Teachers. The program allowed for school visits to a teacher, and thus the parent and child will learn basic, essential skills, activities, and knowledge to prepare for preschool and kindergarten. The program was also great for general child development, enhancing critical thinking, and fostering self-regulation. Ari enjoyed this program and was always excited to attend school to meet with the teacher, wearing her cute little backpack. The family got Ari signed up for preschool, and she got approved for the summer of 2025. Now, Ari has a few goals to help her further develop her skills, knowledge, and abilities. These goals are: attending preschool, making friends, developing social skills, and learning how to follow directions from the teacher. These goals are essential because Ari can unlock plenty of benefits, such as enhanced social, emotional, and cognitive development, which can prepare her for kindergarten.</p>
+<!--the details html element was utilized for a fun little surprise on each page-->
+  <details>
+    <summary>Check it out!</summary>
+    <img src="images/dino4.png" alt="a little t-rex">
+  </details>
+  </div>
+
+  <div class="column">
+    <img src="images/ari-accomplishments-picture.jpg" alt="illustration of a rainbow saying impressive, a cat saying purr-fect and a picture of a young girl" class="image2">
+  </div>
+
+  </div>
+
   </div>
 
 </div>
