--- a/hobby.html
+++ b/hobby.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- This website template was created by: Aisha Keller -->
+<!-- This website template was created by: Aisha Keller 7/24/2025 -->
 <html lang="en">
 <head>
   <title>Ari bioSite</title>
@@ -7,6 +7,10 @@
   <link rel="stylesheet" href="css/styles.css">
   <meta name="viewport" content="width=device width, initial-scale=1">
   <link href="https://fonts.googleapis.com/css2?family=Comic+Relief:wght@400;700&family=Delius&display=swap" rel="stylesheet">
+  <link rel="shortcut icon" href="images/favicon-ari.ico.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-ari-32.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon-ari.png">
+  <link rel="icon" sizes="192x192" href="images/android-chrome-192-ari.png">
 </head>
 <body>
 
@@ -29,7 +33,11 @@
 
     <aside>
     <h1>Hobbies and Interests</h1>
-    <p>Welcome to the gallery page, which hosts Ari's interests and hobbies. This gallery is intended to highlight just a few of her favorite things, because this little girl has so many. Each image presented within the gallery showcases Ari's favorite things, such as her favorite food, animal, TV show, color, mobile app, and toy. She has a wide range of hobbies and interests that have helped her grow in knowledge, skills, and abilities over the years. Many of these interests and hobbies helped shape Ari into who she is today, and continue to be a significant part of her life, inspiring her to learn and discover new things each day. She loves having her favorite things around her for support, and having these things helps build confidence, bravery, and knowledge. Her favorite things are what will continue to shape her future, and discovering new favorites. Each image represents a part of Ari, and each image can also be part of your favorites. Click on the presented image to find out more about Ari's favorites. Each link is accompanied by a corresponding webpage for further information.</p></aside>
+    <p>Welcome to the gallery page, which hosts Ari's interests and hobbies. This gallery is intended to highlight just a few of her favorite things, because this little girl has so many. Each image presented within the gallery showcases Ari's favorite things, such as her favorite food, animal, TV show, color, mobile app, and toy. She has a wide range of hobbies and interests that have helped her grow in knowledge, skills, and abilities over the years. Many of these interests and hobbies helped shape Ari into who she is today, and continue to be a significant part of her life, inspiring her to learn and discover new things each day. She loves having her favorite things around her for support, and having these things helps build confidence, bravery, and knowledge. Her favorite things are what will continue to shape her future, and discovering new favorites. Each image represents a part of Ari, and each image can also be part of your favorites. Click on the presented image to find out more about Ari's favorites. Each link is accompanied by a corresponding webpage for further information.</p>
+    <details>
+      <summary>Look right here!</summary>
+      <img src="images/shark4.png" alt="little shark" class="little-shark">
+    </details></aside>
     <figure> <!-- Figure Element 1 -->
       <a href="https://shop.aldi.us/store/aldi/products/19321102-kirkwood-chicken-fries-24-oz">
       <img src="images/chicken-fries.jpg" alt="chicken fries">
