--- a/about.html
+++ b/about.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- This website template was created by: Aisha Keller -->
+<!-- This website template was created by: Aisha Keller 7/24/2025 -->
 <html lang="en">
 <head>
   <title>Ari bioSite</title>
@@ -7,6 +7,10 @@
   <link rel="stylesheet" href="css/styles.css">
   <meta name="viewport" content="width=device width, initial-scale=1">
   <link href="https://fonts.googleapis.com/css2?family=Comic+Relief:wght@400;700&family=Delius&display=swap" rel="stylesheet">
+  <link rel="shortcut icon" href="images/favicon-ari.ico.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-ari-32.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon-ari.png">
+  <link rel="icon" sizes="192x192" href="images/android-chrome-192-ari.png">
 </head>
 <body>
 
@@ -27,17 +31,26 @@
 <!-- Use the main area to add the main content of the webpage -->
 <main>
 
-<div class="container">
-
   <div id="about-ari-mobile" class="mobile">
 
   <h2>Ari Bio</h2>
   <img src="images/ari-profile.png" alt="picture of a smiling little girl with a blue background" class="image3">
   <p>Ari was born on August 15 and is now almost 4 years old. From enfant to toddler, Ari has developed and grown to become an amazing little girl with developing skills, inspirations, and hobbies. Her amazing-ness starts with her heart and mind, and also a powerful team of family members who are her biggest cheerleaders. Her family consists of a Mom, an Auntie, a Mima, and a Papa. Each family member loves her dearly and has devoted their time to support Ari in all her endeavors. Ari spends a lot of time with each family member, which in return aids in further developing her skills, interests, and heart. Ari is very passionate about learning, music, building, toys, colors, animals, and being around her family members. She expresses her interests and hobbies every single day. She is constantly full of excitement for learning something new, and showing her family her newly learned knowledge. Ari loves learning so much that even tablet time is a way to learn more about the world around her. Ari is currently able to name animals, letters, numbers, Pokémon, colors, shapes, and emotions. She can read some words, and likes to make up her own stories to the books she reads. Ari also likes to sing and dance to her favorite tunes; Baby Shark, Gabby's Dollhouse, and Blue's Clues have some of the best jams. Ari is currently learning about getting along with others, being amongst other children, boundaries, sharing, being gentle with others, and having polite manners. Ari and her family are working together to help achieve being more social, gentle, and understanding of others. Ari is a great young girl with a great heart, a happy personality, and just wants to have fun while learning with everyone.</p>
 
+  <h3>Ari's Skills</h3>
+  <p>Shapes: Can identify shapes such as circle, rectangle, heart, start, and more.</p>
+  <p>Numbers: Can identify numbers, and count. Sometimes up to 20 on a good day.</p>
+  <p>Letters: Can identify letters, sing her ABCs, and can read a few words.</p>
+  <p>Colors: Can identify colors, and give her favorite color which is blue.</p>
+  <p>Pokemon: Ari can identify different pokemon, and her two favorite pokemon are Pikachu and Evee.</p>
+  <details>
+    <summary>Choo Choo!</summary>
+    <img src="images/train1.png" alt="little train">
+  </details>
+
   </div>
 
-  <div class="tablet">
+  <div class="tablet-desktop">
 
   <article>
   <h2>Ari Bio</h2>
@@ -46,10 +59,13 @@
   <p>Between the ages of 1 and 3, Ari has been grasping the world around her with great interest, developing essential skills, inspirations, and hobbies. Her amazing-ness truly starts with her heart, mind, and courage. The most significant component of Ari's life is her family, which consists of her mother, auntie, Mima, and Papa. Together, the family are Ari's biggest cheerleaders, who aid in further developing essential milestones, skills, interests, manners, and knowledge. The family highly enjoys Ari being around, and they never leave a day without saying, "I love you, Peanut." The love and care that the family brings to Ari helps shape her into who she is today, as well as developing exciting goals for the future.</p>
   <p>Ari, with the help of family, can make the most out of her days to help her achieve essential milestones. Trying different foods, accepting new tumblers and cups, watching educational content on the tablet, engaging in creative and simple activities, and going out into town are all ways the family helps Ari reach her milestones.  Doing a variety of different things has helped Ari achieve various skills such as counting, identifying shapes, identifying colors, understanding emotions, being potty trained in and out of the house, identifying Pokémon, having a favorite color, and more.  Ari is becoming increasingly smarter each day, thanks to the knowledge she gains from those around her.</p>
   <p>Ari has many favorite activities that she enjoys while at home or out in town. At home, Ari likes to spend time with her family, run around, swim in the pool, watch the horses, play with the dogs, and engage in active learning on her tablet. Ari is particularly fond of learning new things, so she often watches educational content on her tablet, which helps further develop her skills, emotions, abilities, and knowledge. Out of the house, Ari likes to go grocery shopping, get a McDonald's Kids Meal, go to the indoor playground, go to the outdoor playground, visit the library, get a donut at Yummy's Donut Palace, go to school programs for parents and their children, and do some toy shopping. Ari also enjoys attending events that feature amusement rides.</p>
+  <details>
+    <summary>What is in here?</summary>
+      <img src="images/lion3.png" alt="little lion" class="little-lion">
+  </details>
   </article>
 
   </div>
-</div>
 
   <div class="tablet-desktop">
 
