--- a/hobby.html
+++ b/hobby.html
@@ -39,42 +39,42 @@
       <img src="images/shark4.png" alt="little shark" class="little-shark">
     </details></aside>
     <figure> <!-- Figure Element 1 -->
-      <a href="https://shop.aldi.us/store/aldi/products/19321102-kirkwood-chicken-fries-24-oz">
+      <a href="https://shop.aldi.us/store/aldi/products/19321102-kirkwood-chicken-fries-24-oz" alt="link to chicken fries from Aldi's">
       <img src="images/chicken-fries.jpg" alt="chicken fries">
       </a>
         <figcaption>One of Ari's favorite foods is chicken fries. These are long crispy chicken shaped as french fries. Whenever Ari want's something simple to chow down on, she likes to have some chicken fries.</figcaption>
     </figure>
 
     <figure> <!-- Figure Element 2 -->
-      <a href="https://www.natgeokids.com/uk/discover/animals/general-animals/10-lion-facts/">
+      <a href="https://www.natgeokids.com/uk/discover/animals/general-animals/10-lion-facts/" alt="link to lion facts from National Geographic Kids">
         <img src="images/lion.jpg" alt="lion">
       </a>
       <figcaption>Ari's favorite animal is a lion. The first time I asked her what her favorite animal was, she said it was a lion. This makes sense, because she is often times making 'rawr' sounds like a lion would make.</figcaption>
     </figure>
 
     <figure> <!--Figure Element 3 -->
-      <a href="https://www.pinkfong.com/en/?srsltid=AfmBOopgcz5FS-TsoYCkxi25-enm2cmk-2alm1u11s7_dstY7XI3xbe4">
+      <a href="https://www.pinkfong.com/en/?srsltid=AfmBOopgcz5FS-TsoYCkxi25-enm2cmk-2alm1u11s7_dstY7XI3xbe4" alt="Link to Pinkfong Baby Shark website">
       <img src="images/baby-shark.jpg" alt="a picture of the baby shark family">
       </a>
       <figcaption>Ari has been a big time fan of the baby shark song, and the show. She watches a lot of baby shark, and enjoys dancing and singing to the music.</figcaption>
     </figure>
 
     <figure> <!-- Figure Element 4 -->
-      <a href="https://www.hunterlab.com/blog/the-color-blue/">
+      <a href="https://www.hunterlab.com/blog/the-color-blue/" alt="link to a the HunterLab website that gives facts about the color blue">
       <img src="images/blue.jpg" alt="a picture of the color blue">
       </a>
       <figcaption>Ari loves the color blue. She likes a lot of other colors as well, and really enjoys looking at all the colors around her. She can name several colors too. But if you ask her, her favorite color is Blue.</figcaption>
     </figure>
 
     <figure> <!-- Figure Element 5 -->
-      <a href="https://talkingtomandfriends.com/talking-hank">
+      <a href="https://talkingtomandfriends.com/talking-hank" alt="link to the Talking Hang website">
       <img src="images/hank.jpg" alt="a picture of Hank the dog">
       </a>
       <figcaption>My Talking Hank is one of Ari's favorite mobile app games to play on her tablet. She likes taking care of him, exploring the islands with him, and being silly.</figcaption>
     </figure>
 
     <figure> <!-- Figure Element 6 -->
-      <a href="https://shop.mattel.com/collections/thomas-friends">
+      <a href="https://shop.mattel.com/collections/thomas-friends" alt="link to the Thomas and Friends Mattel website">
       <img src="images/thomas-the-train.jpg" alt="a picture of thomas the train">
       </a>
       <figcaption>Ari enjoys playing with her trains, and her train set is from Thomas the Train. She really likes having the train track put together, a play with her toy trains.</figcaption>
